Fix player height being too small on desktop

--- a/src/client/components/Players/players.scss
+++ b/src/client/components/Players/players.scss
@@ -8,7 +8,6 @@
   width: 90%;
   border-right: 8px solid $black-coffee;
   border-left: 8px solid $black-coffee;
-  height: 5vmin;
   padding: 1vh;
   opacity: 0.333;
   &.turn {
